# OperatingSystems

./: CMakeLists.txt
lab1/: CMakeLists.txt  lab1.cpp  lab1Tasks.txt  lab1task9.cpp
lab2/: CMakeLists.txt  lab2.cpp
lab3/: CMakeLists.txt  lab3.cpp  tests.cpp
lab4/: Browser.cpp  CMakeLists.txt  Downloader.cpp
lab5/: Browser1.cpp  CMakeLists.txt  Worker1.cpp  tests1.cpp
